[gd_scene load_steps=25 format=2]

[ext_resource path="res://scripts/Opgave 1/Skrald 6.gd" type="Script" id=1]
[ext_resource path="res://scripts/Opgave 1/Skrald 7.gd" type="Script" id=2]
[ext_resource path="res://scripts/Opgave 1/Affaldssortering 2.gd" type="Script" id=3]
[ext_resource path="res://scripts/Opgave 1/Skrald 8.gd" type="Script" id=4]
[ext_resource path="res://scripts/Opgave 1/Skrald 9.gd" type="Script" id=5]
[ext_resource path="res://scripts/Opgave 1/Skrald 10.gd" type="Script" id=6]
[ext_resource path="res://Grafik/opgaver/affaldsortering/skraldespand_glas_ddu.png" type="Texture" id=7]
[ext_resource path="res://Grafik/opgaver/affaldsortering/plastic_bottle_ddu_rd.png" type="Texture" id=8]
[ext_resource path="res://Grafik/opgaver/affaldsortering/Minigame_lokale_ddu.png" type="Texture" id=9]
[ext_resource path="res://Grafik/opgaver/affaldsortering/skraldespand_plastik_ddu.png" type="Texture" id=10]
[ext_resource path="res://Grafik/opgaver/affaldsortering/skraldespand_bio_ddu.png" type="Texture" id=11]
[ext_resource path="res://Grafik/opgaver/affaldsortering/papkasse_2_ddu.png" type="Texture" id=12]
[ext_resource path="res://Grafik/opgaver/affaldsortering/skraldespand_pap_ddu.png" type="Texture" id=13]
[ext_resource path="res://Grafik/opgaver/affaldsortering/skraldespand_metal_ddu.png" type="Texture" id=14]
[ext_resource path="res://Grafik/opgaver/affaldsortering/Metal_gryde.png" type="Texture" id=15]
[ext_resource path="res://Grafik/opgaver/affaldsortering/Pizza_slice.png" type="Texture" id=16]
[ext_resource path="res://Grafik/opgaver/affaldsortering/Drikkeglas.png" type="Texture" id=17]
[ext_resource path="res://times.ttf" type="DynamicFontData" id=18]

[sub_resource type="CapsuleShape2D" id=1]
radius = 37.0
height = 84.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.8571
height = 71.4286

[sub_resource type="DynamicFont" id=3]
size = 75
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 18 )

[node name="Affaldssortering 2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="MinigameLokaleDdu" type="Sprite" parent="."]
position = Vector2( 768, 150 )
texture = ExtResource( 9 )

[node name="Node2D2" type="Node2D" parent="."]

[node name="SkraldespandGlasDdu" type="Sprite" parent="Node2D2"]
position = Vector2( 278, 410 )
texture = ExtResource( 7 )

[node name="Skraldespand_glas" type="Area2D" parent="Node2D2/SkraldespandGlasDdu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D2/SkraldespandGlasDdu/Skraldespand_glas"]
position = Vector2( 0, 75 )
shape = SubResource( 1 )

[node name="SkraldespandBioDdu" type="Sprite" parent="Node2D2"]
position = Vector2( 540, 410 )
texture = ExtResource( 11 )

[node name="Skraldespand_bio" type="Area2D" parent="Node2D2/SkraldespandBioDdu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D2/SkraldespandBioDdu/Skraldespand_bio"]
position = Vector2( 0, 75 )
shape = SubResource( 1 )

[node name="SkraldespandPapDdu" type="Sprite" parent="Node2D2"]
position = Vector2( 780, 410 )
texture = ExtResource( 13 )

[node name="Skraldespand_pap" type="Area2D" parent="Node2D2/SkraldespandPapDdu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D2/SkraldespandPapDdu/Skraldespand_pap"]
position = Vector2( 0, 75 )
shape = SubResource( 1 )

[node name="SkraldespandPlastikDdu" type="Sprite" parent="Node2D2"]
position = Vector2( 1040, 410 )
texture = ExtResource( 10 )

[node name="Skraldespand_plast" type="Area2D" parent="Node2D2/SkraldespandPlastikDdu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D2/SkraldespandPlastikDdu/Skraldespand_plast"]
position = Vector2( 0, 75 )
shape = SubResource( 1 )

[node name="SkraldespandMetalDdu" type="Sprite" parent="Node2D2"]
position = Vector2( 1300, 410 )
texture = ExtResource( 14 )

[node name="Skraldespand_metal" type="Area2D" parent="Node2D2/SkraldespandMetalDdu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D2/SkraldespandMetalDdu/Skraldespand_metal"]
position = Vector2( 0, 75 )
shape = SubResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Skrald 6" type="Panel" parent="Node2D"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 140.0
margin_top = -103.0
margin_right = 237.0
margin_bottom = 185.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="PlasticBottleDduRd" type="Sprite" parent="Node2D/Skrald 6"]
position = Vector2( 49, 144 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 8 )

[node name="Skrald 6" type="Area2D" parent="Node2D/Skrald 6/PlasticBottleDduRd"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Skrald 6/PlasticBottleDduRd/Skrald 6"]
position = Vector2( 0, 50 )
shape = SubResource( 2 )

[node name="Skrald 7" type="Panel" parent="Node2D"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 380.0
margin_top = -42.0
margin_right = 485.0
margin_bottom = 119.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="PizzaSlice" type="Sprite" parent="Node2D/Skrald 7"]
position = Vector2( 48, 79 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )

[node name="Skrald 7" type="Area2D" parent="Node2D/Skrald 7/PizzaSlice"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Skrald 7/PizzaSlice/Skrald 7"]
position = Vector2( 0, 50 )
shape = SubResource( 2 )

[node name="Skrald 8" type="Panel" parent="Node2D"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 580.0
margin_top = -67.0
margin_right = 798.0
margin_bottom = 85.0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Papkasse2Ddu" type="Sprite" parent="Node2D/Skrald 8"]
position = Vector2( 112, 78 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )

[node name="Skrald 8" type="Area2D" parent="Node2D/Skrald 8/Papkasse2Ddu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Skrald 8/Papkasse2Ddu/Skrald 8"]
position = Vector2( 0, 50 )
shape = SubResource( 2 )

[node name="Skrald 9" type="Panel" parent="Node2D"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 1242.0
margin_top = -103.0
margin_right = 1333.0
margin_bottom = 99.0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Drikkeglas" type="Sprite" parent="Node2D/Skrald 9"]
position = Vector2( 45.0001, 102 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 17 )

[node name="Skrald 9" type="Area2D" parent="Node2D/Skrald 9/Drikkeglas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Skrald 9/Drikkeglas/Skrald 9"]
position = Vector2( 0, 20 )
shape = SubResource( 2 )

[node name="Skrald 10" type="Panel" parent="Node2D"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 916.0
margin_top = -51.0
margin_right = 1134.0
margin_bottom = 78.0
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="MetalGryde" type="Sprite" parent="Node2D/Skrald 10"]
position = Vector2( 109, 66 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 15 )

[node name="Skrald 10" type="Area2D" parent="Node2D/Skrald 10/MetalGryde"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Skrald 10/MetalGryde/Skrald 10"]
position = Vector2( 0, 50 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 613, 324 )
offset = Vector2( 0, -170 )
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = 0
limit_top = -300

[node name="Spil færdig" type="ColorRect" parent="."]
visible = false
margin_left = 241.0
margin_top = -188.0
margin_right = 1331.0
margin_bottom = 485.0
color = Color( 0.168627, 0.545098, 0.156863, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="TextEdit2" type="TextEdit" parent="Spil færdig"]
margin_left = 265.0
margin_top = 16.0
margin_right = 852.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 3 )
text = "        Opgave 2
     Tøj sortering"

[node name="RichTextLabel" type="RichTextLabel" parent="Spil færdig"]
margin_left = 141.0
margin_top = 204.0
margin_right = 979.0
margin_bottom = 439.0
custom_fonts/normal_font = SubResource( 4 )
text = "                                         GODT Gået!!
			
 At Sortere sit affald efter de korrekte henvisninger er meget vigtigt for den grønne omstilling. Det sørger for at vi kan få genbrugt  så  meget af de værdifulde ressourcer som muligt "

[node name="Spil igen" type="Button" parent="Spil færdig"]
margin_left = 117.0
margin_top = 460.0
margin_right = 414.0
margin_bottom = 607.0
custom_fonts/font = SubResource( 5 )
text = "Spil Igen"

[node name="Videre" type="Button" parent="Spil færdig"]
margin_left = 670.0
margin_top = 460.0
margin_right = 988.0
margin_bottom = 610.0
custom_fonts/font = SubResource( 6 )
text = "Videre"

[connection signal="gui_input" from="Node2D/Skrald 6" to="Node2D/Skrald 6" method="_on_Skrald_6_gui_input"]
[connection signal="area_entered" from="Node2D/Skrald 6/PlasticBottleDduRd/Skrald 6" to="Node2D/Skrald 6" method="_on_Skrald_6_area_entered"]
[connection signal="gui_input" from="Node2D/Skrald 7" to="Node2D/Skrald 7" method="_on_Skrald_7_gui_input"]
[connection signal="area_entered" from="Node2D/Skrald 7/PizzaSlice/Skrald 7" to="Node2D/Skrald 7" method="_on_Skrald_7_area_entered"]
[connection signal="gui_input" from="Node2D/Skrald 8" to="Node2D/Skrald 8" method="_on_Skrald_8_gui_input"]
[connection signal="area_entered" from="Node2D/Skrald 8/Papkasse2Ddu/Skrald 8" to="Node2D/Skrald 8" method="_on_Skrald_8_area_entered"]
[connection signal="gui_input" from="Node2D/Skrald 9" to="Node2D/Skrald 9" method="_on_Skrald_9_gui_input"]
[connection signal="area_entered" from="Node2D/Skrald 9/Drikkeglas/Skrald 9" to="Node2D/Skrald 9" method="_on_Skrald_9_area_entered"]
[connection signal="gui_input" from="Node2D/Skrald 10" to="Node2D/Skrald 10" method="_on_Skrald_10_gui_input"]
[connection signal="area_entered" from="Node2D/Skrald 10/MetalGryde/Skrald 10" to="Node2D/Skrald 10" method="_on_Skrald_10_area_entered"]
[connection signal="pressed" from="Spil færdig/Spil igen" to="." method="_on_Spil_igen_pressed"]
[connection signal="pressed" from="Spil færdig/Videre" to="." method="_on_Videre_pressed"]
